--- a/note.ipynb
+++ b/note.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "text": [
       "fatal: destination path 'tf-gogh' already exists and is not an empty directory.\n",
-      "\u001b[33mWARNING: Skipping cupy-cuda111 as it is not installed.\u001b[0m\n",
+      "\u001B[33mWARNING: Skipping cupy-cuda111 as it is not installed.\u001B[0m\n",
       "Requirement already satisfied: tensorflow-gpu==1.15 in /usr/local/lib/python3.7/dist-packages (1.15.0)\n",
       "Requirement already satisfied: pip in /usr/local/lib/python3.7/dist-packages (21.1.3)\n",
       "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (57.4.0)\n",
