--- a/note.ipynb
+++ b/note.ipynb
@@ -15,16 +15,7 @@
   "language_info": {
    "name": "python"
   },
-  "accelerator": "GPU",
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
-  }
+  "accelerator": "GPU"
  },
  "cells": [
   {
@@ -121,7 +112,8 @@
     "                -m vgg \\\n",
     "                --iteration 5000 \\\n",
     "                --lr 4.0 \\\n",
-    "                --lam 0.3 \\\n",
+    "                --lam 0.005 \\\n",
+    "                --mix 0.1 \\\n",
     "                --height 512 \\\n",
     "                --width 512"
    ],
