[update] Add option.

--- a/note.ipynb
+++ b/note.ipynb
@@ -114,6 +114,7 @@
     "                --lr 4.0 \\\n",
     "                --lam 0.005 \\\n",
     "                --mix 0.6 \\\n",
+    "                --brightness 1. \\\n",
     "                --height 512 \\\n",
     "                --width 512"
    ],
