--- a/note.ipynb
+++ b/note.ipynb
@@ -113,8 +113,8 @@
     "                --iteration 5000 \\\n",
     "                --lr 4.0 \\\n",
     "                --lam 0.005 \\\n",
-    "                --mix 0.6 \\\n",
-    "                --brightness 1. \\\n",
+    "                --mix 0.005 \\\n",
+    "                --brightness 1.5 \\\n",
     "                --height 512 \\\n",
     "                --width 512"
    ],
